# At least we have cmake 3. 
cmake_minimum_required(VERSION 3.0 FATAL_ERROR)

# =========================================================================
# Not platform specific plugins.
# =========================================================================

add_subdirectory( Gl3Driver )

# =========================================================================
# Enables only on Linux platform.
if(${CMAKE_SYSTEM_NAME} MATCHES "Linux")
# =========================================================================

# =========================================================================
endif(${CMAKE_SYSTEM_NAME} MATCHES "Linux")
# =========================================================================

# =========================================================================
# Enables only on Darwin platform.
if(${CMAKE_SYSTEM_NAME} MATCHES "Darwin")
# =========================================================================

add_subdirectory( OSXWindow )

# =========================================================================
endif(${CMAKE_SYSTEM_NAME} MATCHES "Darwin")
# =========================================================================

# =========================================================================
# Enables only on Darwin platform.
if(${CMAKE_SYSTEM_NAME} MATCHES "Windows")
# =========================================================================

# =========================================================================
endif(${CMAKE_SYSTEM_NAME} MATCHES "Windows")
# =========================================================================